fix(app): keep config.yaml's own line endings when saving it
AuraConfig.save read with Files.readAllLines and wrote with
Files.write(Path, List<String>). Both discard the file's actual line
terminator, and the write side appends System.lineSeparator() after every
line, including the last. On Windows that is \r\n — so a file written with
plain \n and no trailing newline, which is exactly the shape of the
owner's real %APPDATA%\Aura\config.yaml, came back with every line ending
rewritten to \r\n and a trailing newline that was never there. Confirmed
with od -c against a byte-identical copy of the real file's shape before
trusting the fix, not only through readAllLines-based tests, which strip
line endings before a comparison ever sees them.

This is the same failure the brief names for a dropped key, one level
down: the file the owner reads afterward is not their file byte-for-byte,
even though every key and value is exactly right. save() now reads the
whole file as one string, detects its terminator and whether it ends in
one, and reconstructs both on write — so a file save() never touched stays
byte-identical apart from the three lines it owns.

The cost: two more tests and a few more private helpers on AuraConfig.
Neither test would have failed the other way — Files.readAllLines-based
assertions cannot see a line ending at all, which is exactly how the bug
passed the six tests in the previous commit.